delete product - fix

--- a/doctor_appointment_client/package.json
+++ b/doctor_appointment_client/package.json
@@ -18,6 +18,7 @@
     "react-phone-number-input": "^3.1.35",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-snackbar": "^1.1.11",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
