--- a/doctor_appointment_client/package.json
+++ b/doctor_appointment_client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "dexie": "^3.0.3",
+    "emailjs": "^3.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
